Issue fixed: Search box and your test tab icon alignment

--- a/WebContent/styles/style.css
+++ b/WebContent/styles/style.css
@@ -306,7 +306,7 @@ label{font-family:Helvetica; font-size:14px; font-weight:normal; color: #4D4D4D;
   width: 40px;
   right: 20px;
   position: absolute;
-  top: 5px
+  top: 1px
   
 }
 .iconButtons:hover {
@@ -404,7 +404,8 @@ hr{margin: 0;}
 .container-fluid, .col-md-6, .col-lg-6 {  padding-right: 20px; padding-left: 20px;}
 
 h4, .h4, h5, .h5, h6, .h6 {  margin-top: 8px; margin-bottom: 8px;}
- 
+ .input-group .form-control {padding-right: 35px;}
+.form-control {padding-right: 36px;}
 
 @media (max-width: 767px)
 { 	.container{width:750px;}
